@@ -1,3 +1,8 @@
+2002-08-15  Jody Goldberg <jody@gnome.org>
+
+	* gnome-keybinding-properties.c : Add a pile of missing metacity
+	  bindings.
+
 2002-08-06  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.0.1
